# ai-chatops

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.infra/: main.tf
app/internal/: __init__.py  chat.py  config.py  store.py
app/models/: chat.py
app/routers/: main.py
postmortems/: incidente-01-07.txt  incidente-05-07.txt  incidente-15-25.txt  incidente-20-25.txt  incidente-25-25.txt
script/: db.sh
