[project]
name = "openai-pp"
version = "0.1.0"
description = "Me learning AI with OpenAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.19",
    "langchain-postgres>=0.0.14",
    "psycopg-binary>=3.2.9",
]
